add task-hunter
